--- a/index.html
+++ b/index.html
@@ -11,24 +11,11 @@
 
   <div class="container">
     <div class="row">
-      <div class="col-md-12">
-        <h1>Day One HW</h1>
-        <h3>Minimum Requirements:</h3>
-        <ul>
-          <li>Replace my info with yours (you may delete these instructions)</li>
-          <li>Save and push to your branch</li>
-          <li>Open pull request</li>
-          <li>You may merge and delete your branch when you get the thumbs up</li>
-          <li>BONUS: You may style however you'd like</li>
-        </ul>
-      </div>
-    </div>
-    <div class="row">
       <div class="col-md-3">
-        <h1>Rocky</h1>
+        <h1>Michael</h1>
       </div>
       <div class="col-md-9">
-        <h3>I started taking classes at Bitwise because I was tired of working retail jobs and feeling like I was stuck. A friend of mine told me about the Geekwise classes and I thought I'd give it a shot. Three months later, I was offered an internship at Edit LLC and shortly after, I was accepted into the cohort and never looked back.</h3>
+        <h3>I've always been interested in computers even when I was very young. After high school I went straight to Fresno State and pursued a computer engineering degree. Three years or so into my degree I had to drop out and become self supportive. After a few dead-end jobs I really wanted to get back to school. My step father told me about gitwise and I decided to give it a try. I liked the first class and am looking forward to learning more!</h3>
       </div>
     </div>
   </div>
