--- a/index.html
+++ b/index.html
@@ -7,32 +7,57 @@
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/styles.css">
 </head>
+
 <body>
-
-  <div class="container">
-    <div class="row">
+  <div class="container-fluid">
+    <h3>[Container-Fluid]</h3>
+    <div class="row header">
       <div class="col-md-12">
-        <h1>Day One HW</h1>
-        <h3>Minimum Requirements:</h3>
-        <ul>
-          <li>Replace my info with yours (you may delete these instructions)</li>
-          <li>Save and push to your branch</li>
-          <li>Open pull request</li>
-          <li>You may merge and delete your branch when you get the thumbs up</li>
-          <li>BONUS: You may style however you'd like</li>
-        </ul>
+        <h3>[Header]</h3>
       </div>
-    </div>
-    <div class="row">
-      <div class="col-md-3">
-        <h1>Rocky</h1>
-      </div>
-      <div class="col-md-9">
-        <h3>I started taking classes at Bitwise because I was tired of working retail jobs and feeling like I was stuck. A friend of mine told me about the Geekwise classes and I thought I'd give it a shot. Three months later, I was offered an internship at Edit LLC and shortly after, I was accepted into the cohort and never looked back.</h3>
-      </div>
-    </div>
-  </div>
+    </div> <!-- End Row -->
 
+    <div class="row nav">
+      <div class="col-md-12">
+        <h3>[Nav]</h3>
+      </div>
+    </div> <!-- End Row -->
+
+    <div class="row">
+      <div class="col-md-9 content">
+        <h3>[Content]</h3>
+      </div>
+      <div class="col-md-3 aside">
+        <h3>[Aside]</h3>
+      </div>
+    </div> <!--End content/Aside-->
+
+    <div class="row">
+      <div class="col-md-3 promo">
+        <h3>Promo 1</h3>
+      </div>
+
+      <div class="col-md-3 promo">
+        <h3>Promo 2</h3>
+      </div>
+
+      <div class="col-md-3 promo">
+        <h3>Promo 3</h3>
+      </div>
+
+      <div class="col-md-3 promo">
+        <h3>Promo 4</h3>
+      </div>
+    </div> <!--End of Promo Row-->
+
+    <div class="row">
+      <div class="col-md-12 footer">
+        <h3>[Footer]</h3>
+      </div>
+    </div> <!--End of Footer-->
+
+  </div> <!-- End Container -->
+</body>
   <!-- start of javascript -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
   <script type="text/javascript" src="js/bootstrap.min.js"></script>
