--- a/index.html
+++ b/index.html
@@ -9,14 +9,18 @@
 </head>
 <body>
 
-  <div class="container">
-    <div class="row">
-      <div class="col-md-3">
+  <div class="container-fluid">
+    <div class="row header">
+      <div class="col-md-3 h">
         <h1>Michael</h1>
       </div>
       <div class="col-md-9">
         <h3>I've always been interested in computers even when I was very young. After high school I went straight to Fresno State and pursued a computer engineering degree. Three years or so into my degree I had to drop out and become self supportive. After a few dead-end jobs I really wanted to get back to school. My step father told me about gitwise and I decided to give it a try. I liked the first class and am looking forward to learning more!</h3>
       </div>
+    </div>
+
+    <div class="row h">
+
     </div>
   </div>
 
